<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F5FF"
    android:orientation="vertical"
    tools:context=".uiPakage.mainlunch">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="180dp"
    android:scaleType="fitXY"
        android:id="@+id/imgW"
        android:src="@mipmap/bg_wd"
        ></ImageView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
android:id="@+id/maintx"
        android:layout_marginLeft="@dimen/liveness_20"
        android:layout_marginTop="@dimen/liveness_40"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="26sp"
        ></TextView>
    <TextView
        android:layout_marginLeft="@dimen/liveness_20"
        android:layout_below="@+id/maintx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
android:layout_marginTop="@dimen/liveness_5"
        android:textColor="@color/white"
        android:text="@string/launcher_title"></TextView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/liveness_20"
        android:layout_marginRight="@dimen/liveness_20"
        android:layout_marginTop="144dp"
        android:background="@drawable/idcard_bg"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">


            <RelativeLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                >
                <ImageView
                    android:id="@+id/xiangji"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@mipmap/xiangji"
                    ></ImageView>



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:id="@+id/xjjjj"
                    android:layout_toRightOf="@+id/xiangji"
                    android:layout_marginLeft="10dp"
                    android:text="@string/launcher_xiangji"
                    android:textStyle="bold"
                    android:textColor="@color/black33"
                    android:textSize="16sp"
                    ></TextView>
                <ImageView
                    android:layout_width="20dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_height="20dp"
                    android:src="@mipmap/xuanze"
                    ></ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:textSize="14sp"
                    android:textColor="@color/black33"
                    android:text="@string/launcher_xiangjidetail"></TextView>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                >
                <ImageView
                    android:id="@+id/sms"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@mipmap/dx"
                    ></ImageView>
                <ImageView
                    android:layout_width="20dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_height="20dp"
                    android:src="@mipmap/xuanze"
                    ></ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_toRightOf="@+id/sms"
                    android:layout_marginLeft="10dp"
                    android:text="@string/sms_permission"
                    android:textColor="@color/black33"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    ></TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:textSize="14sp"
                    android:textColor="@color/black33"

                    android:text="@string/sms_desprition"></TextView>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                >
                <ImageView
                    android:id="@+id/tongxunlu"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@mipmap/txl"
                    ></ImageView>
                <ImageView
                    android:layout_width="20dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_height="20dp"
                    android:src="@mipmap/xuanze"
                    ></ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tongxunlu"
                    android:layout_marginLeft="10dp"
                    android:text="@string/launcher_operator"
                    android:textStyle="bold"
                    android:textColor="@color/black33"
                    android:textSize="16sp"
                    ></TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:textSize="14sp"
                    android:textColor="@color/black33"
                    android:text="@string/launcher_operator_detail"></TextView>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                >
                <ImageView
                    android:id="@+id/dingwei"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@mipmap/wz"
                    ></ImageView>
                <ImageView
                    android:layout_width="20dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_height="20dp"
                    android:src="@mipmap/xuanze"
                    ></ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_toRightOf="@+id/dingwei"
                    android:layout_marginLeft="10dp"
                    android:text="@string/launcher_weizi"
                    android:textColor="@color/black33"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    ></TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:textSize="14sp"
                    android:textColor="@color/black33"

                    android:text="@string/launcher_weizi_detail"></TextView>
            </RelativeLayout>

            <Button
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="44dp"
                android:id="@+id/launcher_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/new_next_btnbg"
                android:text="@string/launcher_button"
                android:textColor="@color/white"
                android:textSize="10sp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>