<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fl_webview_container"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/notfond"
            android:layout_gravity="center_horizontal"></ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/timeoutstr"
            android:textStyle="bold"
            android:textSize="16dp"
            android:textColor="@color/black33"
            android:layout_gravity="center_horizontal"></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/error_network"
            android:textColor="@color/clolr8c93ac"
            android:textSize="12dp"
            ></TextView>
        <Button
            android:id="@+id/refresh"
            android:layout_width="115dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/reflash"
            android:textSize="16dp"
            android:textColor="@color/color1966D1"
            android:background="@drawable/network_btn_bg"
            ></Button>
    </LinearLayout>


</FrameLayout>